--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .vs/WebSite1/v16/.suo
 .vs/WebSite1/v16/Server/sqlite3/db.lock
 .vs/WebSite1/v16/Server/sqlite3/storage.ide
+WebSite1/App_Data/LNdb_log.ldf
+WebSite1/App_Data/LNdb.mdf
+UpgradeLog.htm
+.vs/WebSite1/v16/Server/sqlite3/storage.ide-wal
+.vs/WebSite1/v16/Server/sqlite3/storage.ide-shm
