--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .vs/WebSite1/v16/Server/sqlite3/storage.ide-shm
 WebSite1/App_Data/lddb_Log.ldf
 WebSite1/App_Data/lddb.mdf
+WebSite1/App_Data/lddb.mdf
+WebSite1/App_Data/lddb_Log.ldf
