--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ WebSite1/App_Data/lddb_Log.ldf
 WebSite1/App_Data/lddb.mdf
 WebSite1/App_Data/lddb.mdf
 WebSite1/App_Data/lddb_Log.ldf
+WebSite1/App_Data/lddb_Log.ldf
+WebSite1/App_Data/lddb.mdf
