--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ WebSite1/App_Data/lddb.mdf
 WebSite1/App_Data/lddb_Log.ldf
 WebSite1/App_Data/lddb_Log.ldf
 WebSite1/App_Data/lddb.mdf
+.vs/WebSite1/v16/.suo
+.vs/WebSite1/config/applicationhost.config
+.vs/WebSite1/config/applicationhost.config
+.vs/WebSite1/v16/.suo
+.vs/WebSite1/v16/Server/sqlite3/storage.ide
