--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ WebSite1/App_Data/lddb.mdf
 .vs/WebSite1/config/applicationhost.config
 .vs/WebSite1/v16/.suo
 .vs/WebSite1/v16/Server/sqlite3/storage.ide
+*.config
