--- a/WebSite1/Web.config
+++ b/WebSite1/Web.config
@@ -11,6 +11,7 @@
   </configSections>
 
     <system.web>
+      
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     <!-- This httpHandlers config only required if using IIS6 (or lower) --><!--
@@ -37,6 +38,10 @@
     </system.codedom>
 
 <extnet theme="Triton" licenseKey="** Ext.NET LICENSE KEY HERE **" initScriptMode="Linked" /><system.webServer>
+  <security>
+    <requestFiltering allowDoubleEscaping="true" />
+  </security>
+ 
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler" />
